[package]
name = "arcball-cgmath"
version = "0.3.4"
authors = ["Mark Hintz <markinportland7@gmail.com>"]
license = "MIT"
description = "A simple arcball-style camera. Uses the cgmath-rs library"
repository = "https://github.com/mhintz/arcball-cgmath"
readme = "README.md"
keywords = ["arcball", "cgmath", "camera", "arc", "ball"]

[dependencies]
cgmath = "0.9.1"
num-traits = "0.1"
